--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <!-- Open Graph Meta Tags for Preview -->
     <meta property="og:title" content="CLAIM VERIFIED BADGE, NOW !">
     <meta property="og:description" content="🎁 Get your exclusive verified badge now 🎁">
-    <meta property="og:image" content="ver.png">
+    <meta property="og:image" content="https://kucing9999.netlify.app/ver.png">
     <meta property="og:url" content="https://www.yourwebsite.com">
     
     <!-- Twitter Card Meta Tags (Optional) -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="CLAIM VERIFIED BADGE, NOW !">
     <meta name="twitter:description" content="🎁 Get your exclusive verified badge now 🎁">
-    <meta name="twitter:image" content="ver.png">
+    <meta name="twitter:image" content="https://kucing9999.netlify.app/ver.png">
     
     <title>ZEPETO</title>
 
