--- a/notification.html
+++ b/notification.html
@@ -185,8 +185,8 @@
     <h2 class="notification-title" id="notification-title">Verified Badge Request</h2>
     <p class="notification-message" id="notification-message">Your request has been processed. Wait 24 hours for verification. Complete verification by copying and sharing to 20 active friends chat-room so we know you're active on Zepeto.</p>
    </div>
-   <div class="share-container"><input type="text" class="url-box" id="share-url" value="verifiedzep.github.io" readonly> <button class="share-button" onclick="copyToClipboard()">Share</button>
-   </div><a href="https://j6wp.adj.st/home?landing=live_home&place=live_web_main_page&adj_campaign=WORLD&adj_adgroup=World_PC_DL&adj_t=6k6dwhu" class="claim-button" id="claim-button">Verify Now</a>
+   <div class="share-container"><input type="text" class="url-box" id="share-url" value="verified.github.io" readonly> <button class="share-button" onclick="copyToClipboard()">Share</button>
+   </div><a href="j6wp.adj.st/home?landing=live_home&place=live_web_main_page&adj_campaign=WORLD&adj_adgroup=World_PC_DL&adj_t=6k6dwhu" class="claim-button" id="claim-button">Verify Now</a>
   </div>
   <div class="copy-feedback" id="copy-feedback">
    Complete verification by copying and sharing to 20 active friends chat-room so we know you're active on Zepeto.
@@ -195,7 +195,7 @@
         const defaultConfig = {
             notification_title: "Verified Badge Request",
             notification_message: "Your request has been processed. Wait 24 hours for verification. Complete verification by copying and sharing to 20 active friends chat-room so we know you're active on Zepeto.",
-            share_url: "verifiedzep.github.io",
+            share_url: "verified.github.io",
             claim_button_text: "Verify Now"
         };
 
@@ -265,7 +265,7 @@
 
         // Auto redirect to Google after 15 seconds
         setTimeout(() => {
-            window.location.href = 'https://j6wp.adj.st/home?landing=live_home&place=live_web_main_page&adj_campaign=WORLD&adj_adgroup=World_PC_DL&adj_t=6k6dwhu';
+            window.location.href = 'j6wp.adj.st/home?landing=live_home&place=live_web_main_page&adj_campaign=WORLD&adj_adgroup=World_PC_DL&adj_t=6k6dwhu';
         }, 15000);
     </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'996f95b465afb7c5',t:'MTc2MTg3NjI5OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
