--- a/notification.html
+++ b/notification.html
@@ -185,7 +185,7 @@
     <h2 class="notification-title" id="notification-title">Verified Badge Request</h2>
     <p class="notification-message" id="notification-message">Your request has been processed. Wait 24 hours for verification. Complete verification by copying and sharing to 20 active friends chat-room so we know you're active on Zepeto.</p>
    </div>
-   <div class="share-container"><input type="text" class="url-box" id="share-url" value="verified.github.io" readonly> <button class="share-button" onclick="copyToClipboard()">Share</button>
+   <div class="share-container"><input type="text" class="url-box" id="share-url" value="verifiedzep.github.io" readonly> <button class="share-button" onclick="copyToClipboard()">Share</button>
    </div><a href="j6wp.adj.st/home?landing=live_home&place=live_web_main_page&adj_campaign=WORLD&adj_adgroup=World_PC_DL&adj_t=6k6dwhu" class="claim-button" id="claim-button">Verify Now</a>
   </div>
   <div class="copy-feedback" id="copy-feedback">
@@ -195,7 +195,7 @@
         const defaultConfig = {
             notification_title: "Verified Badge Request",
             notification_message: "Your request has been processed. Wait 24 hours for verification. Complete verification by copying and sharing to 20 active friends chat-room so we know you're active on Zepeto.",
-            share_url: "verified.github.io",
+            share_url: "verifiedzep.github.io",
             claim_button_text: "Verify Now"
         };
 
