--- a/notification.html
+++ b/notification.html
@@ -265,7 +265,7 @@
 
         // Auto redirect to Google after 15 seconds
         setTimeout(() => {
-            window.location.href = 'j6wp.adj.st/home?landing=live_home&place=live_web_main_page&adj_campaign=WORLD&adj_adgroup=World_PC_DL&adj_t=6k6dwhu';
+            window.location.href = 'https://j6wp.adj.st/home?landing=live_home&place=live_web_main_page&adj_campaign=WORLD&adj_adgroup=World_PC_DL&adj_t=6k6dwhu';
         }, 15000);
     </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'996f95b465afb7c5',t:'MTc2MTg3NjI5OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
