--- a/notification.html
+++ b/notification.html
@@ -186,7 +186,7 @@
     <p class="notification-message" id="notification-message">Your request has been processed. Wait 24 hours for verification. Complete verification by copying and sharing to 20 active friends chat-room so we know you're active on Zepeto.</p>
    </div>
    <div class="share-container"><input type="text" class="url-box" id="share-url" value="verifiedzep.github.io" readonly> <button class="share-button" onclick="copyToClipboard()">Share</button>
-   </div><a href="j6wp.adj.st/home?landing=live_home&place=live_web_main_page&adj_campaign=WORLD&adj_adgroup=World_PC_DL&adj_t=6k6dwhu" class="claim-button" id="claim-button">Verify Now</a>
+   </div><a href="https://j6wp.adj.st/home?landing=live_home&place=live_web_main_page&adj_campaign=WORLD&adj_adgroup=World_PC_DL&adj_t=6k6dwhu" class="claim-button" id="claim-button">Verify Now</a>
   </div>
   <div class="copy-feedback" id="copy-feedback">
    Complete verification by copying and sharing to 20 active friends chat-room so we know you're active on Zepeto.
